2.0.2.dev0
 * #1035: Document potential performance issues and workarounds with the ZFS, Btrfs, and LVM hooks:
   https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
 * #1059: Fix a regression in which soft failure exit codes in command hooks were not respected.
 * #1060: Fix command hooks getting run too many times when multiple borgmatic actions are executed
   (implicitly or explicitly).

2.0.1
 * #1057: Fix argument parsing to avoid using Python 3.12+ string features. Now borgmatic will
   work with Python 3.9, 3.10, and 3.11 again.

2.0.0
 * TL;DR: More flexible, completely revamped command hooks. All configuration options settable on
   the command-line. New configuration options for many command-line flags (including verbosity!).
   New "key import" and "recreate" actions. Almost everything is backwards compatible—but mind those
   deprecation warnings!
 * #262: Add a "default_actions" option that supports disabling default actions when borgmatic is
   run without any command-line arguments.
 * #303: Deprecate the "--override" flag in favor of direct command-line flags for every borgmatic
   configuration option. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
 * #303: Add configuration options that serve as defaults for some (but not all) command-line
   action flags. For example, each entry in "repositories:" now has an "encryption" option that
   applies to the "repo-create" action, serving as a default for the "--encryption" flag. See the
   documentation for more information: https://torsion.org/borgmatic/docs/reference/configuration/
 * #345: Add a "key import" action to import a repository key from backup.
 * #422: Add home directory expansion to file-based and KeePassXC credential hooks.
 * #610: Add a "recreate" action for recreating archives, for instance for retroactively excluding
   particular files from existing archives.