@@ -2,8 +2,9 @@
  * #1035: Document potential performance issues and workarounds with the ZFS, Btrfs, and LVM hooks:
    https://torsion.org/borgmatic/docs/how-to/snapshot-your-filesystems/
  * #1059: Fix a regression in which soft failure exit codes in command hooks were not respected.
- * #1060: Fix command hooks getting run too many times when multiple borgmatic actions are executed
-   (implicitly or explicitly).
+ * #1060: Fix action command hooks getting run too many times when multiple borgmatic actions are
+   executed (implicitly or explicitly).
+ * #1060: Don't run action command hooks for actions listed in the "skip_actions" option.
 
 2.0.1
  * #1057: Fix argument parsing to avoid using Python 3.12+ string features. Now borgmatic will
